--- a/archives/toutiao-search/2024-04-07.md
+++ b/archives/toutiao-search/2024-04-07.md
@@ -1,62 +1,76 @@
 # 2024-04-07
 
-共 231 条
+共 245 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sun Apr 07 2024 14:00:56 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Sun Apr 07 2024 15:00:35 GMT+0800 (China Standard Time) -->
 1. [想当行长继承家产男孩父亲确为行长](https://so.toutiao.com/search?keyword=想当行长继承家产男孩父亲确为行长)
 1. [奔驰车主回应轧蒜苗被砸车](https://so.toutiao.com/search?keyword=奔驰车主回应轧蒜苗被砸车)
 1. [清明节假期国内出游1.19亿人次](https://so.toutiao.com/search?keyword=清明节假期国内出游1.19亿人次)
 1. [五一假期前后都要调休上班](https://so.toutiao.com/search?keyword=五一假期前后都要调休上班)
-1. [金价逼近720元/克](https://so.toutiao.com/search?keyword=金价逼近720元/克)
+1. [官方：想当行长男孩父母符合任职制度](https://so.toutiao.com/search?keyword=官方：想当行长男孩父母符合任职制度)
 1. [媒体：耶伦访华的一细节值得美深思](https://so.toutiao.com/search?keyword=媒体：耶伦访华的一细节值得美深思)
-1. [疑似男学生言语调戏女代课老师](https://so.toutiao.com/search?keyword=疑似男学生言语调戏女代课老师)
-1. [马英九热情回应游客：吃了三碗面了](https://so.toutiao.com/search?keyword=马英九热情回应游客：吃了三碗面了)
-1. [以色列冒险袭击伊朗的三重动机](https://so.toutiao.com/search?keyword=以色列冒险袭击伊朗的三重动机)
-1. [新能源汽车废旧电池回收现状](https://so.toutiao.com/search?keyword=新能源汽车废旧电池回收现状)
-1. [白岩松评江西提灯定损事件](https://so.toutiao.com/search?keyword=白岩松评江西提灯定损事件)
-1. [大V解读为何耶伦批中国产能剩余大](https://so.toutiao.com/search?keyword=大V解读为何耶伦批中国产能剩余大)
-1. [陈楚生与儿子同框表演](https://so.toutiao.com/search?keyword=陈楚生与儿子同框表演)
-1. [秋天妈妈承认离婚三次](https://so.toutiao.com/search?keyword=秋天妈妈承认离婚三次)
-1. [福州辟谣举办体育中考模拟测试](https://so.toutiao.com/search?keyword=福州辟谣举办体育中考模拟测试)
-1. [蔡磊称身体已到渐冻症晚期](https://so.toutiao.com/search?keyword=蔡磊称身体已到渐冻症晚期)
-1. [男子被骗共享屏幕后冲进派出所求助](https://so.toutiao.com/search?keyword=男子被骗共享屏幕后冲进派出所求助)
-1. [金价为何再创新高](https://so.toutiao.com/search?keyword=金价为何再创新高)
-1. [律师：大妈原本受害砸奔驰构成犯罪](https://so.toutiao.com/search?keyword=律师：大妈原本受害砸奔驰构成犯罪)
 1. [今年还要调休3次](https://so.toutiao.com/search?keyword=今年还要调休3次)
+1. [秋天妈妈承认离婚三次](https://so.toutiao.com/search?keyword=秋天妈妈承认离婚三次)
+1. [疑似男学生言语调戏女代课老师](https://so.toutiao.com/search?keyword=疑似男学生言语调戏女代课老师)
+1. [以色列冒险袭击伊朗的三重动机](https://so.toutiao.com/search?keyword=以色列冒险袭击伊朗的三重动机)
+1. [金价逼近720元/克](https://so.toutiao.com/search?keyword=金价逼近720元/克)
+1. [白岩松评江西提灯定损事件](https://so.toutiao.com/search?keyword=白岩松评江西提灯定损事件)
+1. [官方通报15岁女孩被围殴](https://so.toutiao.com/search?keyword=官方通报15岁女孩被围殴)
+1. [陈楚生与儿子同框表演](https://so.toutiao.com/search?keyword=陈楚生与儿子同框表演)
+1. [福州辟谣举办体育中考模拟测试](https://so.toutiao.com/search?keyword=福州辟谣举办体育中考模拟测试)
+1. [金价为何再创新高](https://so.toutiao.com/search?keyword=金价为何再创新高)
+1. [“王婆”换人后节目热度不减](https://so.toutiao.com/search?keyword=“王婆”换人后节目热度不减)
+1. [律师：大妈原本受害砸奔驰构成犯罪](https://so.toutiao.com/search?keyword=律师：大妈原本受害砸奔驰构成犯罪)
+1. [清明祭祖拜山后 家人们席地就餐](https://so.toutiao.com/search?keyword=清明祭祖拜山后+家人们席地就餐)
+1. [持续飞涨的黄金和逐渐脱钩的美元](https://so.toutiao.com/search?keyword=持续飞涨的黄金和逐渐脱钩的美元)
+1. [数万人要求以色列总理“立即辞职”](https://so.toutiao.com/search?keyword=数万人要求以色列总理“立即辞职”)
+1. [郑州多枚天鹅蛋被偷 现场监控毁坏](https://so.toutiao.com/search?keyword=郑州多枚天鹅蛋被偷+现场监控毁坏)
+1. [大V解读为何耶伦批中国产能剩余大](https://so.toutiao.com/search?keyword=大V解读为何耶伦批中国产能剩余大)
+1. [消息称华为P70或不举办发布会](https://so.toutiao.com/search?keyword=消息称华为P70或不举办发布会)
+1. [女子挖野菜意外发现一枚迫击炮弹](https://so.toutiao.com/search?keyword=女子挖野菜意外发现一枚迫击炮弹)
+1. [新能源汽车废旧电池回收现状](https://so.toutiao.com/search?keyword=新能源汽车废旧电池回收现状)
+1. [乌军称东部前线局势“特别困难”](https://so.toutiao.com/search?keyword=乌军称东部前线局势“特别困难”)
+1. [现在是卖金饰的最佳时机吗](https://so.toutiao.com/search?keyword=现在是卖金饰的最佳时机吗)
+1. [大学老师教卜卦成“网红课”](https://so.toutiao.com/search?keyword=大学老师教卜卦成“网红课”)
+1. [恒大汽车造车5年亏超1100亿](https://so.toutiao.com/search?keyword=恒大汽车造车5年亏超1100亿)
+1. [上海站遭旅客冲卡是谁的责任](https://so.toutiao.com/search?keyword=上海站遭旅客冲卡是谁的责任)
+1. [网传小孩从商场4楼掉下身亡](https://so.toutiao.com/search?keyword=网传小孩从商场4楼掉下身亡)
+1. [俄罗斯将增加苏34战斗轰炸机产量](https://so.toutiao.com/search?keyword=俄罗斯将增加苏34战斗轰炸机产量)
+1. [男子举报妻子骗钱赌博枉为人师](https://so.toutiao.com/search?keyword=男子举报妻子骗钱赌博枉为人师)
+1. [男孩清明去墓地捡贡品回家倒在地上](https://so.toutiao.com/search?keyword=男孩清明去墓地捡贡品回家倒在地上)
+1. [蔡磊称身体已到渐冻症晚期](https://so.toutiao.com/search?keyword=蔡磊称身体已到渐冻症晚期)
+1. [男子数次故意别车被拘留10日](https://so.toutiao.com/search?keyword=男子数次故意别车被拘留10日)
+1. [部分省考公务员招聘年龄放宽至40周岁](https://so.toutiao.com/search?keyword=部分省考公务员招聘年龄放宽至40周岁)
+1. [俄军新兵带队攻入乌军阵地视频曝光](https://so.toutiao.com/search?keyword=俄军新兵带队攻入乌军阵地视频曝光)
+1. [旅行博主称在南昌公厕充电被威胁](https://so.toutiao.com/search?keyword=旅行博主称在南昌公厕充电被威胁)
+1. [女子骑电动车未戴头盔被拦激动大喊](https://so.toutiao.com/search?keyword=女子骑电动车未戴头盔被拦激动大喊)
+1. [伊朗伊斯兰革命卫队：将报复以色列](https://so.toutiao.com/search?keyword=伊朗伊斯兰革命卫队：将报复以色列)
+1. [成都“迪士尼”被限流](https://so.toutiao.com/search?keyword=成都“迪士尼”被限流)
+1. [虐猫能否成为拒绝录取的理由](https://so.toutiao.com/search?keyword=虐猫能否成为拒绝录取的理由)
+1. [陈楚生爆改冰川王子](https://so.toutiao.com/search?keyword=陈楚生爆改冰川王子)
+1. [美媒：拜登对以供武计划遭党内压力](https://so.toutiao.com/search?keyword=美媒：拜登对以供武计划遭党内压力)
+1. [中国中冶原总裁张孟星被查](https://so.toutiao.com/search?keyword=中国中冶原总裁张孟星被查)
+1. [专家建议允许不合适的公务员辞职](https://so.toutiao.com/search?keyword=专家建议允许不合适的公务员辞职)
+1. [赵奕欢被郝蕾说没有女主气场](https://so.toutiao.com/search?keyword=赵奕欢被郝蕾说没有女主气场)
+1. [广东江河汛情仍在发展](https://so.toutiao.com/search?keyword=广东江河汛情仍在发展)
+1. [马英九热情回应游客：吃了三碗面了](https://so.toutiao.com/search?keyword=马英九热情回应游客：吃了三碗面了)
+1. [男子被骗共享屏幕后冲进派出所求助](https://so.toutiao.com/search?keyword=男子被骗共享屏幕后冲进派出所求助)
 1. [多方辟谣山西被霸凌女孩轻生跳楼](https://so.toutiao.com/search?keyword=多方辟谣山西被霸凌女孩轻生跳楼)
 1. [记者：段暄向不止一位官员输送利益](https://so.toutiao.com/search?keyword=记者：段暄向不止一位官员输送利益)
-1. [旅行博主称在南昌公厕充电被威胁](https://so.toutiao.com/search?keyword=旅行博主称在南昌公厕充电被威胁)
-1. [清明祭祖拜山后 家人们席地就餐](https://so.toutiao.com/search?keyword=清明祭祖拜山后+家人们席地就餐)
 1. [男子被藏獒追咬 母女开门帮避险](https://so.toutiao.com/search?keyword=男子被藏獒追咬+母女开门帮避险)
-1. [伊朗伊斯兰革命卫队：将报复以色列](https://so.toutiao.com/search?keyword=伊朗伊斯兰革命卫队：将报复以色列)
-1. [现在是卖金饰的最佳时机吗](https://so.toutiao.com/search?keyword=现在是卖金饰的最佳时机吗)
 1. [智己L6轿车首搭固态电池“光年”](https://so.toutiao.com/search?keyword=智己L6轿车首搭固态电池“光年”)
-1. [“王婆”换人后节目热度不减](https://so.toutiao.com/search?keyword=“王婆”换人后节目热度不减)
-1. [消息称华为P70或不举办发布会](https://so.toutiao.com/search?keyword=消息称华为P70或不举办发布会)
-1. [上海站遭旅客冲卡是谁的责任](https://so.toutiao.com/search?keyword=上海站遭旅客冲卡是谁的责任)
-1. [虐猫能否成为拒绝录取的理由](https://so.toutiao.com/search?keyword=虐猫能否成为拒绝录取的理由)
 1. [郑州全城寻找2枚被偷天鹅蛋](https://so.toutiao.com/search?keyword=郑州全城寻找2枚被偷天鹅蛋)
-1. [数万人要求以色列总理“立即辞职”](https://so.toutiao.com/search?keyword=数万人要求以色列总理“立即辞职”)
-1. [男孩清明去墓地捡贡品回家倒在地上](https://so.toutiao.com/search?keyword=男孩清明去墓地捡贡品回家倒在地上)
 1. [林更新说要做赵丽颖的“瑶”](https://so.toutiao.com/search?keyword=林更新说要做赵丽颖的“瑶”)
-1. [成都“迪士尼”被限流](https://so.toutiao.com/search?keyword=成都“迪士尼”被限流)
 1. [厨房突然起火 孩子全程冷静灭火](https://so.toutiao.com/search?keyword=厨房突然起火+孩子全程冷静灭火)
-1. [官方通报15岁女孩被围殴](https://so.toutiao.com/search?keyword=官方通报15岁女孩被围殴)
 1. [患癌的凯特依然是英国王室最大秘密](https://so.toutiao.com/search?keyword=患癌的凯特依然是英国王室最大秘密)
 1. [小伙为躲避路人拍照镜头脚步忙乱](https://so.toutiao.com/search?keyword=小伙为躲避路人拍照镜头脚步忙乱)
-1. [赵奕欢被郝蕾说没有女主气场](https://so.toutiao.com/search?keyword=赵奕欢被郝蕾说没有女主气场)
-1. [陈楚生爆改冰川王子](https://so.toutiao.com/search?keyword=陈楚生爆改冰川王子)
 1. [以色列再次爆发大规模抗议集会](https://so.toutiao.com/search?keyword=以色列再次爆发大规模抗议集会)
-1. [女子骑电动车未戴头盔被拦激动大喊](https://so.toutiao.com/search?keyword=女子骑电动车未戴头盔被拦激动大喊)
 1. [北京师范大学原校长钟秉林同志逝世](https://so.toutiao.com/search?keyword=北京师范大学原校长钟秉林同志逝世)
-1. [大学老师教卜卦成“网红课”](https://so.toutiao.com/search?keyword=大学老师教卜卦成“网红课”)
 1. [奇瑞iCAR V23实车曝光](https://so.toutiao.com/search?keyword=奇瑞iCAR+V23实车曝光)
 1. [媒体曝光段暄部分犯罪手法和经过](https://so.toutiao.com/search?keyword=媒体曝光段暄部分犯罪手法和经过)
-1. [男子数次故意别车被拘留10日](https://so.toutiao.com/search?keyword=男子数次故意别车被拘留10日)
 1. [奔驰车轧蒜苗被砸 车主回应](https://so.toutiao.com/search?keyword=奔驰车轧蒜苗被砸+车主回应)
 1. [骑士主帅：失误让我们吃了亏](https://so.toutiao.com/search?keyword=骑士主帅：失误让我们吃了亏)
-1. [持续飞涨的黄金和逐渐脱钩的美元](https://so.toutiao.com/search?keyword=持续飞涨的黄金和逐渐脱钩的美元)
 1. [以色列发生汽车冲撞抗议人群事件](https://so.toutiao.com/search?keyword=以色列发生汽车冲撞抗议人群事件)
 1. [部分小学生沉迷“烟卡”需警惕](https://so.toutiao.com/search?keyword=部分小学生沉迷“烟卡”需警惕)
 1. [价格战将燃油车企逼到角落](https://so.toutiao.com/search?keyword=价格战将燃油车企逼到角落)
